--- a/report.html
+++ b/report.html
@@ -11876,23 +11876,23 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
+<div class="prompt input_prompt">In&nbsp;[9]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># TODO: Minimum price of the data</span>
-<span class="n">minimum_price</span> <span class="o">=</span> <span class="n">prices</span><span class="o">.</span><span class="n">min</span><span class="p">()</span>
+<span class="n">minimum_price</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">min</span><span class="p">(</span><span class="n">prices</span><span class="o">.</span><span class="n">values</span><span class="p">)</span>
 
 <span class="c1"># TODO: Maximum price of the data</span>
-<span class="n">maximum_price</span> <span class="o">=</span> <span class="n">prices</span><span class="o">.</span><span class="n">max</span><span class="p">()</span>
+<span class="n">maximum_price</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">max</span><span class="p">(</span><span class="n">prices</span><span class="o">.</span><span class="n">values</span><span class="p">)</span>
 
 <span class="c1"># TODO: Mean price of the data</span>
-<span class="n">mean_price</span> <span class="o">=</span> <span class="n">prices</span><span class="o">.</span><span class="n">mean</span><span class="p">()</span>
+<span class="n">mean_price</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">mean</span><span class="p">(</span><span class="n">prices</span><span class="o">.</span><span class="n">values</span><span class="p">)</span>
 
 <span class="c1"># TODO: Median price of the data</span>
-<span class="n">median_price</span> <span class="o">=</span> <span class="n">prices</span><span class="o">.</span><span class="n">median</span><span class="p">()</span>
+<span class="n">median_price</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">median</span><span class="p">(</span><span class="n">prices</span><span class="o">.</span><span class="n">values</span><span class="p">)</span>
 
 <span class="c1"># TODO: Standard deviation of prices of the data</span>
-<span class="n">std_price</span> <span class="o">=</span> <span class="n">prices</span><span class="o">.</span><span class="n">std</span><span class="p">()</span>
+<span class="n">std_price</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">std</span><span class="p">(</span><span class="n">prices</span><span class="o">.</span><span class="n">values</span><span class="p">)</span>
 
 <span class="c1"># Show the calculated statistics</span>
 <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Statistics for Boston housing dataset:</span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">)</span>
@@ -11923,7 +11923,7 @@ Minimum price: $105000.0
 Maximum price: $1024800.0
 Mean price: $454342.9447852761
 Median price $438900.0
-Standard deviation of prices: $165340.27765266784
+Standard deviation of prices: $165171.13154429474
 </pre>
 </div>
 </div>
@@ -12112,8 +12112,8 @@ Standard deviation of prices: $165340.27765266784
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer:</strong>
-Yes, the model seems to have successfully captured the variation of the target variable.
-Because, 92.3% of the variance is predictable.</p>
+Yes, the model has successfully captured the variation of the target variable.
+As we can see, it can explain 92.3% of variance of the true values.</p>
 
 </div>
 </div>
@@ -12192,8 +12192,9 @@ Because, 92.3% of the variance is predictable.</p>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer: </strong>
-Spliting datasets into training and testing sets ensures that the model is not memorizing the entire dataset and resulting in a overfit.
-On the other hand, training on fewer datasets than the testing set might lead to low variance and high bias, which results in underfit.</p>
+Spliting datasets into training and testing subsets ensures that the model is not overfitting.
+With a testing set, the model can be tested on a new set of data which is different from the data on which the model is trained. If the training score is too high than that of the testing score, then it is overfitting.
+During training, the model is validated using the cross-validation set. This helps to avoid the bias towards the testing set.</p>
 
 </div>
 </div>
@@ -12347,8 +12348,8 @@ Think about the pros and cons of adding more training points based on if the tra
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer: </strong></p>
 <ul>
-<li>High Bias. As we can see from the graph, there is an underfitting happening.</li>
-<li>The model overfits. The training set performs much more better than the testing set, as it seems to have memorized the features.</li>
+<li>High Bias which is evident from the lower scores on both training and testing. As we can see from the graph, there is an underfitting happening.</li>
+<li>The model overfits which can be inferred from the high variance between the training and testing scores. The training set performs much more better than the testing set, as it seems to have memorized the features.</li>
 </ul>
 
 </div>
@@ -12409,8 +12410,8 @@ Think about the pros and cons of adding more training points based on if the tra
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer: </strong></p>
 <ul>
-<li>Grid Search Technique is used to decide on the best performing model. On the training set, competing model parameters like <code>max_depth</code> are tested for various gamma values like 0.1, 1, 10, 100 etc. </li>
-<li>Then, the model is tested on the cross-validation set for F1-score. The best performing model is the one that has the highest F1 score.</li>
+<li>Grid Search Technique is used to tune the hyper-parameters (e.g: max_depth) of a model. </li>
+<li>We pass a list of possible values for each of hyper parameters and a performance metric function. The performance metric is executed for each of these values. Based on the performance metric result, the best possible combination of the hyper parameters is returned.</li>
 </ul>
 
 </div>
@@ -12438,8 +12439,8 @@ Think about the pros and cons of adding more training points based on if the tra
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer: </strong></p>
 <ul>
-<li>k-fold cross-validation is technique where, the data is split in to k-buckets and then training happens on these buckets k-times. Each time, we choose one of the buckets as our testing set. In the end, the model performance is calculated from the average performance of these k-iterations.</li>
-<li>In case of grid search cv, the models are compared only with a particular subset of data for training or testing. In this case, we may throw away some useful features from the unused data. Whereas in a <code>k-fold cv</code> this is eliminated as we make use of the entire dataset in buckets and using them to train our model.</li>
+<li>k-fold cross-validation is technique where, the training data is split in to k-buckets and then training happens on these buckets k-times. Each time, we choose one of the buckets as our cross-validation set and the model is trained on the remaining <code>k-1</code> buckets. In the end, the model performance is calculated from the average performance of these cross-validation scores. By this way, we can maximise the use of data to both train and cross-validate the model.</li>
+<li>k-fold cv can be used to provide the cross-validation sets for the grid search to get the best possible hyper parameters of the model. If we straight away partition the data into training, CV and testing sets, then we reduce the number of samples available for training the model. k-fold CV helps us avoid that. We also cannot use the testing set to validate during training as it will bias the model towards the testing set.</li>
 </ul>
 
 </div>
@@ -12675,9 +12676,14 @@ Predicted selling price for Client 3&#39;s home: $933,660.00
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer: </strong></p>
-<p>Predicted selling price for Client 1's home: $403,447.06</p>
-<p>Predicted selling price for Client 2's home: $233,647.83</p>
-<p>Predicted selling price for Client 3's home: $933,660.00</p>
+<p>Predicted selling price for Client 1's home: <code>$403,447.06</code>
+Client 1's home falls to median range (<code>~$438900.0</code>) of housing prices in that area. Compared to Client 2's, 1 has almost half of 2's neighbourhood poverty level and good schools. Also 1 has one room more than 2.
+However, 1 has higher poverty level than 3, lesser quality schools than 3 and lesser number of rooms.
+So, this house is priced in the median range.</p>
+<p>Predicted selling price for Client 2's home: <code>$233,647.83</code>
+Client 2's home falls in the minimum range (<code>~$105000.0</code>). Compared to the other 2 houses, this house has the least rooms, highest neighbourhood poverty and lowest quality of schools. Hence, this is priced the close to the minimum.</p>
+<p>Predicted selling price for Client 3's home: <code>$933,660.00</code>
+Client 3's house falls in the maximum range (<code>~$1024800</code>). This house is way ahead of the other 2, in all aspects - maximum number of rooms, highest quality schools and least neighbourhood poverty. Hence it is priceed close to the maximum.</p>
 <p>Yes. Houses are expensive in higher income areas, areas with good pupil-teacher ratio and also the number of rooms.
 Client 3's house is closer to the maximum price as it has higher pupil-teacher ratio, more rooms and lower neighbourhood poverty level. While, Client 2's is closer to the minimum price and Client 1's is closer to the median for similar reasons.</p>
 
